# ChangeLog for dev-vcs/subversion
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.246 2015/08/06 19:55:44 zlogene Exp $

  06 Aug 2015; Mikle Kolyada <zlogene@gentoo.org> subversion-1.7.21.ebuild,
  subversion-1.8.14.ebuild:
  amd64 stable wrt bug #556076

*subversion-1.7.21 (06 Aug 2015)

  06 Aug 2015; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +subversion-1.7.21.ebuild:
  Version bump for 1.7 series to 1.7.21 for bug 556076, known issue: some tests
  may fail

*subversion-1.9.0 (06 Aug 2015)
*subversion-1.8.14-r1 (06 Aug 2015)
*subversion-1.8.14 (06 Aug 2015)

  06 Aug 2015; Lars Wendler <polynomial-c@gentoo.org>
  -subversion-1.8.13-r2.ebuild, +subversion-1.8.14.ebuild,
  +subversion-1.8.14-r1.ebuild, +subversion-1.9.0.ebuild:
  Security bump (bug #556076). Removed old.

  03 Jul 2015; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -subversion-1.7.19.ebuild, -subversion-1.8.11.ebuild:
  Drop vulnerable versions, bug 545348

  03 Jul 2015; Agostino Sarubbo <ago@gentoo.org> subversion-1.7.20.ebuild,
  subversion-1.8.13-r1.ebuild:
  Stable for alpha, wrt bug #546644

  24 Jun 2015; Agostino Sarubbo <ago@gentoo.org> subversion-1.7.20.ebuild,
  subversion-1.8.13-r1.ebuild:
  Stable for ppc, wrt bug #545348

  11 Jun 2015; Markus Meier <maekke@gentoo.org> subversion-1.8.13-r1.ebuild:
  arm stable, bug #545348

  04 Jun 2015; Michael Palimaka <kensington@gentoo.org>
  subversion-1.7.19.ebuild, subversion-1.7.20.ebuild, subversion-1.8.11.ebuild,
  subversion-1.8.13-r1.ebuild, subversion-1.8.13-r2.ebuild:
  Move various kde-base packages to kde-apps.

  02 Jun 2015; Jack Morgan <jmorgan@gentoo.org> subversion-1.7.20.ebuild,
  subversion-1.8.13-r1.ebuild:
  sparc stable wrt bug #545348

  01 Jun 2015; Jeroen Roovers <jer@gentoo.org> subversion-1.8.13-r1.ebuild:
  Stable for HPPA PPC64 (bug #545348).

  01 Jun 2015; Agostino Sarubbo <ago@gentoo.org> subversion-1.8.13-r1.ebuild: